[package]
name = "tandem"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "prepare"

[[bin]]
name = "restore"

[dependencies]
anyhow = "1.0.93"
chrono = "0.4.38"
dialoguer = { version = "0.11.0", default-features = false, features = ["password"] }
ecdsa = { version = "0.16.9", features = ["std", "signing", "verifying", "pem", "pkcs8", "der"] }
elliptic-curve = { version = "0.13.8", features = ["std", "ecdh", "digest", "pem"] }
futures = "0.3.31"
hickory-resolver = "0.24.1"
json-patch = "3.0.1"
k256 = { version = "0.13.4", features = ["pem", "ecdsa"] }
multibase = "0.9.1"
p256 = { version = "0.13.2", features = ["ecdsa"] }
rand = "0.8.5"
reqwest = { version = "0.12.9", features = ["json", "hickory-dns", "rustls-tls"] }
serde = { version = "1.0.215", features = ["alloc", "derive"] }
serde_json = { version = "1.0.133", features = ["alloc"] }
tokio = { version = "1.41.1", default-features = false, features = ["macros", "rt", "rt-multi-thread"] }

